--- a/app/views/index-dropdown.ejs
+++ b/app/views/index-dropdown.ejs
@@ -9,7 +9,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="stylesheets/style.css"
+      href="/stylesheets/style.css"
     />
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -31,8 +31,8 @@
   </head>
   <body>
     <div>
-      <label for="HeadlineAct" class="block text-sm font-medium text-gray-900">
-        Choose Chart
+      <label for="HeadlineAct" class="text-lg font-medium text-gray-900">
+        Choose Chart:
       </label>
 
       <select
@@ -40,7 +40,7 @@
         x-init="groups = getDropdownItem()"
         name="HeadlineAct"
         id="HeadlineAct"
-        class="mt-1.5 w-full rounded-lg border-gray-300 text-gray-700 sm:text-sm"
+        class="min-w-52 rounded-lg border-gray-300 text-gray-700 text-lg"
         x-on:click="(e) => handleOptionClick(e, $data)"
       >
         <option value="">Please select</option>
