--- a/app/views/index-params.ejs
+++ b/app/views/index-params.ejs
@@ -9,7 +9,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="stylesheets/style.css"
+      href="/stylesheets/style.css"
     />
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
