--- a/app/views/index-simulation.ejs
+++ b/app/views/index-simulation.ejs
@@ -9,7 +9,7 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="/stylesheets/style.css"
+      href="<%- pathUrl %>/stylesheets/style.css"
     />
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -44,7 +44,7 @@
 }">
     <div class="p-2 flex justify-between items-center">
         <div>
-            <label for="HeadlineAct" class="text-3xl font-medium text-gray-900">
+			<label for="HeadlineAct" class="text-3xl font-medium text-gray-900">
               Choose Chart:
             </label>
       
@@ -53,8 +53,9 @@
               x-init="groups = getDropdownItem()"
               name="HeadlineAct"
               id="HeadlineAct"
-              class="min-w-60 rounded-lg border-gray-300 text-gray-700 text-3xl"
+              class="min-w-60 rounded-lg border-gray-300 text-gray-700 text-2xl"
               x-on:change="(e) => handleOptionClick(e, $data)"
+			  style="padding:10px 20px;margin:0 0 15px 10px"
             >
               <option value="">Please select</option>
               <template x-for="(group,groupIndex) in groups" :key="groupIndex">
@@ -75,9 +76,10 @@
                 x-init="groups = getDropdownCalculateTypeItem()"
                 name="HeadlineAct"
                 id="HeadlineAct"
-                class="min-w-60 rounded-lg border-gray-300 text-gray-700 text-3xl"
+                class="min-w-60 rounded-lg border-gray-300 text-gray-700 text-2xl"
                 x-on:change="(e) => handleCalculateTypeOptionClick(e, $data)"
                 x-model="selectedId"
+				style="padding:10px 20px;margin:0 0 15px 10px"
               >
                 <option value="">Please select</option>
                 <template x-for="(group,groupIndex) in groups" :key="groupIndex">
@@ -88,7 +90,7 @@
                   </optgroup>
                 </template>
               </select>
-              <button @click="open = ! open" class="inline-block rounded-full border border-[#2a2874] bg-[#2a2874] p-3 text-white hover:bg-gray-900 hover:text-white focus:outline-none focus:ring focus:ring-gray-900 active:text-blue-900">
+              <button @click="open = ! open" class="inline-block rounded-full border border-[#2a2874] bg-[#2a2874] p-3 text-white hover:bg-gray-900 hover:text-white focus:outline-none focus:ring focus:ring-gray-900 active:text-blue-900" style="margin-top:-15px">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-sigma"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M16 8.9V7H8l4 5-4 5h8v-1.9"/>
                 </svg>
             </button>
@@ -96,7 +98,7 @@
     </div>
     
     <!-- regression input -->
-    <div x-show="open" @click.outside="open = false" class="max-w-2xl p-2" x-transition>
+    <div x-show="open" @click.outside="open = false" class="max-w-2xl p-2" x-transition style="float:right">
         <div class="rounded-lg bg-[#2a2874] p-8 shadow-lg lg:col-span-3 lg:p-12">
             <h4 class="px-2 text-white font-bold mb-4 underline underline-offset-2">
               <span>Regression - </span>
